--- a/package.json
+++ b/package.json
@@ -2,6 +2,25 @@
   "dependencies": {
     "curl": "^0.1.4",
     "express": "^5.1.0",
+    "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.10"
-  }
+  },
+  "name": "learning-rest",
+  "description": "learning rest api.",
+  "version": "1.0.0",
+  "main": "app.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/hussainhamid/learning-rest.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/hussainhamid/learning-rest/issues"
+  },
+  "homepage": "https://github.com/hussainhamid/learning-rest#readme"
 }
